--- a/section_experience_short.tex
+++ b/section_experience_short.tex
@@ -19,7 +19,7 @@
                         \item Sommerjobb
                       \end{itemize}
                     }
-                    {React, HTML, TypeScript,C\#, SASS }
+                    {React, HTML, TypeScript,C\# }
   \emptySeparator
   \experience
     {-}   {Konsulent}{Kantega AS}{Bergen}
@@ -28,7 +28,7 @@
                         \item Deltids konsulent 
                       \end{itemize}
                     }
-                    {Kotlin, HTML, JavaScript}
+                    {Kotlin, HTML}
   \emptySeparator
   
   \experience
@@ -58,8 +58,7 @@
     {juni 2017}   {Mentor}{Mentro Norge As}{Stavanger}
     {desember 2016} {
                       \begin{itemize}
-                        \item hjelpelærer
-                        \item jobbet med  elever som slet med motivasjonen og skoleflinke elever som ønsket å forbedre resultater
+                        \item privatundervisning
                       \end{itemize}
                     }
 
