--- a/section_headline.tex
+++ b/section_headline.tex
@@ -12,7 +12,7 @@
 
 %Jeg er en engasjert og utadvendt 23 år gammel student som begynte på en bachelor i informatikk, økonomi og matematikk ved Universitetet i Bergen høsten 2020. En kombinasjon av at jeg fikk enkelte av emnene mine godkjent fra Frankrike og at jeg tar flere studiepoeng i semesteret gjør at jeg blir ferdig med bacheloren min til våren.  Samtidig som jeg fullfører bacheloren min tar jeg masterfag, og planlegger å fullføre en \href{https://www.uib.no/studier/MAMN-INF/OP/plan}{master i optimering} (informatikk) innen sommeren 2023. Etter vidergående begynte jeg på en integrert ingeniørmaster med spesialisering innen matematikk. På studiet hadde jeg gleden av å oppdage programmering samtidig som jeg ønsket meg tilbake til Norge. Min faglige interesse er drevet av fascinasjon, nysgjerrighet og å se nytteverdien av informatikk. Utenom det faglige har jeg lagt mye arbeid ned i det sosiale miljøet.
 
-Jeg er en engasjert og utadvendt 24 år gammel student på siste år av masteren min i algoritmer. Tidligere har jeg tatt en bachelor i informatikk, økonomi og matematikk. 
+Jeg er en engasjert og utadvendt 24 år gammel student som tar en masteren i algoritmer ved Universitetet i Bergen. Tidligere har jeg tatt en bachelor i informatikk, økonomi og matematikk. 
 %Etter vidergående, begynte jeg på en integrert master i ingeniør med spesialisering innen matematikk. På studiet hadde jeg gleden av å oppdage programmering samtidig som jeg ønsket meg tilbake til Norge. En kombinasjon av at jeg fikk enkelte av emnene mine godkjent fra Frankrike og at jeg tok flere studiepoeng i semesteret gjorde at jeg ble ferdig med bacheloren tidelig. 
 Min faglige interesse er drevet av fascinasjon, nysgjerrighet og å se nytteverdien av informatikk. Utenom det faglige har jeg lagt mye arbeid ned i det sosiale miljøet. 
 
